--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <script src="botch.js"></script>
+    <script src="blotch.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
